--- a/index.ipynb
+++ b/index.ipynb
@@ -53,10 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
@@ -66,10 +64,10 @@
     "    return 3*x*3\n",
     "\n",
     "def three_x_y_at_six(x):\n",
-    "    return 3*x*\n",
+    "    return 3*x*6\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
-    "    pass"
+    "    return 3*x*9"
    ]
   },
   {
