--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -607,14 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    return 3*"
+    "    return 3*9"
    ]
   },
   {
