--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -763,7 +763,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    for te"
+    "    for terms in list_of_tem"
    ]
   },
   {
