--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -763,7 +763,9 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    for terms in list_of_tem"
+    "    out\n",
+    "    for terms in list_of_terms:\n",
+    "        "
    ]
   },
   {
