automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -763,9 +763,9 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    out\n",
+    "    output = 0\n",
     "    for terms in list_of_terms:\n",
-    "        "
+    "        output "
    ]
   },
   {
