automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -765,7 +765,7 @@
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    output = 0\n",
     "    for terms in list_of_terms:\n",
-    "        output += terms[0]*[]"
+    "        output += terms[0]*x**[]"
    ]
   },
   {
