--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -879,7 +879,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return ter"
+    "    return term[0]*[term]"
    ]
   },
   {
