--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -952,7 +952,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map())"
+    "    return list(map(lam))"
    ]
   },
   {
