--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -950,7 +950,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda term: term_df_dx(term), list(filter(lambda term: term[] != 0list_of_terms))"
+    "    return list(map(lambda term: term_df_dx(term), list(filter(lambda term: term[1] != 0, list_of_terms))"
    ]
   },
   {
