--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -945,26 +945,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda term: term_df_dx(term), list(filter(lambda term: term[1] != 0, list_of_terms))"
+    "    return list(map(lambda term: term_df_dx(term), list(filter(lambda term: term[1] != 0, list_of_terms))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
+       "[(8, 1, 1), (3, 0, 0)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
