--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -989,7 +989,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    "
+    "    return (term[0] * term[2], term[1] -, term[2])"
    ]
   },
   {
