--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -982,19 +982,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return (term[0] * term[2], term[1] -, term[2])"
+    "    return (term[0] * term[2], term[1], term[2] - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1001,7 @@
        "(4, 2, 1)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,11 +1012,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2, 0)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "term_df_dy(four_x_squared_y) # (4, 2, 0)"
    ]
